Fixing z-index issues with boxed-text style

--- a/assets/scss/helpers/_mixins.scss
+++ b/assets/scss/helpers/_mixins.scss
@@ -84,9 +84,10 @@
 
 // Boxed Text
 @mixin boxed-text($size, $color:white) {
+  z-index: 1;
   @include clearfix;
+  position: relative;
   span {
-    z-index: 1;
     clear: left;
     float: left;
     width: auto;
@@ -112,7 +113,7 @@
     } @else if $size == 2 {
       line-height: 1.1;
     } @else if $size == 3 {
-      line-height: 1;
+      line-height: .98;
     }
   }
 }
